--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.7.2",
+    "use-double-tap": "^1.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
